# core

./: .gitignore
cmake/: genrev.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
crates/: Cargo.toml
crates/authserver/: Cargo.toml  cbindgen.toml  libenturion_authserver.h
crates/authserver/src/: auth_session.rs  lib.rs  packet.rs
crates/kitros-derive/: Cargo.toml
crates/kitros-derive/src/: lib.rs
crates/shared/: Cargo.toml  cbindgen.toml  libenturion_shared.h
crates/shared/src/: banner.rs  config.rs  lib.rs
crates/shared/src/log/: configuration.rs  console.rs  mod.rs  util.rs
crates/shared/src/net/: mod.rs
crates/worldserver/: Cargo.toml  build.rs  cbindgen.toml  libenturion_worldserver.h
crates/worldserver/src/: lib.rs
sql/base/: auth_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql  drop_mysql_8.sql
sql/old/2.4.3/: 00120_world.sql  00123_world_scripts.sql  00262_world.sql
sql/old/3.1.3/: 05670_realmd_uptime.sql
src/common/: CMakeLists.txt  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp
src/common/Configuration/: Config.cpp  Config.h
src/common/Cryptography/: AES.h  Argon2.h  CryptoConstants.h  CryptoGenerics.h  CryptoHash.h  CryptoRandom.h  HMAC.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SessionKeyGenerator.h  TOTP.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Encoding/: Base32.h  Base64.h  BaseEncoding.h
src/common/Hacks/: boost_1_73_process_windows_nopch.h  boost_1_74_fibonacci_heap.h
src/common/Logging/: AppenderConsole.cpp  AppenderFile.cpp  Log.cpp  Log.h  LogCommon.h
src/common/Metric/: Metric.h
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Threading/: ThreadPool.h
src/common/Utilities/: ByteConverter.h  Containers.h  FuzzyFind.h  SmartEnum.h  Timer.h  (+5 more)
tests/: DummyData.h  tc_catch2.h
(+227 files in other folders)
