[package]
name = "enturion_authserver"
version = "0.1.0"
edition = "2021"
publish = false
workspace = ".."

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
anyhow = "1.0.71"
bincode = "2.0.0-rc.3"
bytes = "1.4.0"
enturion_shared = { path = "../shared" }
kitros-derive = { path = "../kitros-derive" }
log = "0.4.17"
futures = "0.3.28"
tokio = { version = "1.28", features = ["io-util", "net", "rt", "rt-multi-thread", "signal", "time"] }
