[package]
name = "enturion_shared"
version = "0.1.0"
edition = "2021"
publish = false
workspace = ".."

[lib]
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
anyhow = "1.0.71"
bincode = "2.0.0-rc.3"
config = { git = "https://github.com/mehcode/config-rs.git" }
console = "0.15.5"
glob = "0.3.1"
futures = "0.3.28"
libc = "0.2.144"
log = "0.4.17"
log4rs = "1.2.0"
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "libloaderapi", "minwindef", "winerror"] }
windows-service = "0.6.0"

[features]
default = ["ffi_config", "ffi_log", "ffi_timer"]
ffi_config = []
ffi_log = []
ffi_timer = []
