[package]
name = "enturion_worldserver"
version = "0.1.0"
edition = "2021"
publish = false
workspace = ".."

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
enturion_shared = { path = "../shared" }
log = "0.4.17"
futures = "0.3.28"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "signal", "time"] }
